# sentiment-analysis-api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: README.md  mkdocs.yml
docs/docs/: configuration.md  development.md  index.md  setup.md
docs/docs/overrides/assets/css/: custom.css
sentiment_analysis_api/: main.py
sentiment_analysis_api/api/: routes.py
sentiment_analysis_api/core/: config.py
sentiment_analysis_api/services/: sentiment.py
sentiment_analysis_api/tests/: test_routes.py
tests/: test_data.py
