[project]
name = "sentiment-analysis-api"
version = "1.0.0"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.30.6",
    "pydantic-settings==2.5.2",
    "textblob==0.18.0.post0",
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "ruff==0.6.8",
    "pre-commit==3.8.0",
    "httpx==0.27.2",
    "requests==2.32.3",
]

[tool.pytest]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["sentiment_analysis_api"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"